tests/require_annotations/pod_with_annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: annotated-pod
  name: annotated-pod
  annotations:
    corp.org/department: hello-world
spec:
  containers:
    - image: alpine
      name: annotated-pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
