tests/require_annotations/pod_without_annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: not-annotated-pod
  name: not-annotated-pod
spec:
  containers:
  - image: alpine
    name: not-annotated-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
